# VamaxBank

./: CMakeLists.txt  LICENSE  README.md  web_server.cpp
c_backend/: backend.c  backend.h
www/: app.js  index.html  style.css
